contracts/protocol/stellar/contracts/macro-integration-tests/tests/ui/storage/fail/no_ttl_extension_on_non_persistent.rs
// UI (trybuild) negative test: #[no_ttl_extension] is only valid on persistent storage variants.

#[common_macros::storage]
pub enum StorageKey {
    #[instance(u32)]
    #[no_ttl_extension]
    Counter,
}

fn main() {}
